<resources>
    <string name="app_name">Penjurian FOBI 1.3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PB FOBI</string>
    <string name="nav_header_subtitle">Pengurus Besar Federasi Olahraga Barongsai Indonesia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>

    <string name="menu_share">Share</string>

    <string name="menu_logout">Log out</string>

    <string name="btn_referee_login">Login Juri</string>
    <string name="btn_admin_login">Login Admin</string>
    <string name="btn_login">Login</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_tambah_team">Tambah Team</string>
    <string name="btn_lihat_team">Lihat Team</string>
    <string name="btn_event_finish">Nonaktifkan</string>
    <string name="btn_event_active">Aktifkan</string>
    <string name="btn_penilaian">Detail Penilaian</string>
    <string name="btn_export">Export Data</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_lihat_detail_penilaian">Lihat Detail Penilaian</string>
    <string name="btn_show">Show</string>

    <string name="username">Username</string>
    <string name="name">Nama Anda</string>
    <string name="no_urut_anda">Pilih No Urut Anda</string>
    <string name="input_name">Input Nama</string>
    <string name="input_code">Input Kode</string>
    <string name="code_event">Kode Event</string>
    <string name="password">Password</string>
    <string name="input_username">Input Username</string>
    <string name="input_password">Input Password</string>
    <string name="list_team">List Team</string>
    <string name="def_value">0</string>


    <!--add event-->
    <string name="tanggal_event">Tanggal Event</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="tema_acara">Tema Acara</string>
    <string name="nama_acara">Nama Acara</string>
    <string name="input_tema">Input Nama Acara</string>
    <string name="jumlah_juri">Jumlah Juri</string>
    <string name="input_jumlah_juri">Input Jumlah Juri</string>
    <string name="input_no_urut">Input Nomor Urut</string>
    <string name="input_nama_team">Input Nama Team</string>


    <!--penilaian-->
    <string name="penilaian">Penilaian</string>
    <string name="pengurangan">Pemotongan</string>
    <string name="team_name">Nama Team : </string>
    <string name="no_urut">Nomor Urut : </string>
    <string name="referee">Juri : </string>
    <string name="n1_sopan_santun">Sopan Santun (Max : 1)</string>
    <string name="n2_judul_dan_alur_cerita">Judul dan Alur Cerita (Max : 1)</string>
    <string name="n3_bentuk_barongsai">Bentuk Barongsai (Max : 1)</string>
    <string name="n4_ekspresi">Ekspresi (Max : 1)</string>
    <string name="n5_musik">Musik (Max : 1)</string>
    <string name="n6_cirikhas_traditional">Cirikhas Traditional (Max : 1)</string>
    <string name="n7_komposisi_permainan">Komposisi Permainan (Max : 1)</string>
    <string name="n8_hasil_dan_permainan">Hasil dan Permainan (Max : 1)</string>
    <string name="n9_keterampilan">Keterampilan (Max : 1)</string>
    <string name="n10_seragam_dan_peralatan">Seragam dan Perlatan/Dekorasi (Max : 1)</string>
    <string name="ks1_kesalahan_lain">Kesalahan lain(0.1 x ...)</string>
    <string name="ks2_kesalahan_kecil">Kesalahan kecil (0.3 x ...)</string>
    <string name="ks3_kesalahan_sedang">Kesalahan sedang(0.5 x ...)</string>
    <string name="ks4_kesalahan_besar">Kesalahan besar(1 x ...)</string>
    <string name="total">Total</string>



    <string name="nilai_maks_1">Nilai (Max : 1.0) :</string>
    <string name="nilai_maks_2">Nilai (Max : 2.0) :</string>
    <string name="nilai_maks_3">Nilai (Max : 3.0) :</string>
    <string name="nilai_maks_4">Nilai (Max : 4.0) :</string>
    <string name="nilai_maks_5">Nilai (Max : 5.0) :</string>
    <string name="nilai">Nilai : </string>

<!--    FOrm Naga-->
    <string name="ap_naga_type_1">I. Gerakan</string>
    <string name="ap_naga_type_1_det_1">- Seluruh Permainan harus sempurna</string>
    <string name="ap_naga_type_1_det_2">- Nilai Maks 5</string>
    <string name="ap_naga_type_1_det_3">- Cara Pemotongan : </string>
    <string name="ap_naga_type_1_det_3_1">* Kecil : 0.1 </string>
    <string name="ap_naga_type_1_det_3_2">* Sedang : 0.2 </string>
    <string name="ap_naga_type_1_det_3_3">* Besar : 0.3 </string>
    <string name="ap_naga_input">- Input : </string>

    <string name="ap_naga_potongan">Potongan : </string>

    <string name="ap_naga_type_2">II. Seni dan Penampilan</string>
    <string name="ap_naga_type_2_det_1">- Nilai Maks 3</string>
    <string name="ap_naga_type_2_det_1_1">1. Semangat, Variasi, Kompak, Tehnik</string>
    <string name="ap_naga_type_2_det_1_2">2. Peralatan, Seragam, Bersih, dan Serasi</string>
    <string name="ap_naga_type_2_det_1_3">3. Keserasian Musik</string>

    <string name="ap_naga_type_3">III. Tingkat Kesulitan</string>
    <string name="ap_naga_type_3_det_1">- Nilai Maks 2</string>
    <string name="ap_naga_type_3_det_2">- 10 = 1.5</string>
    <string name="ap_naga_type_3_det_3">- Lebih 1 grk +0.05</string>
    <string name="ap_naga_type_3_det_4">- Kurang 1 grk -0.1</string>
    <string name="total_penilaian">Total Penilaian</string>
    <string name="total_pengurangan">Total Pengurangan</string>
    <string name="grand_total">Grand Total</string>

    <string name="ap_naga_type_4">IV. Catatan</string>
    <string name="tingkat_kesulitan">Tingkat Kesulitan</string>

<!--form Pekingsai-->

    <string name="ap_pekingsai_type_1">I. Standard</string>
    <string name="ap_pekingsai_type_1_det_1">1. Keindahan gerakan (kelincahan, semangat &amp; bertenaga)</string>
    <string name="ap_pekingsai_type_1_det_2">2. Bentuk Pekingsai, kostum, tata tertib keluar-masuk lapangan</string>
    <string name="ap_pekingsai_type_1_det_3">3. Gerakan masuk akal, rytme kecepatan dan teknik gerakan</string>
    <string name="ap_pekingsai_type_1_det_4">4. Langkah pemain &amp; variasi kuda-kuda (minimal 10 macam)</string>
    <string name="ap_pekingsai_type_1_det_5">5. Keserasian / kekompakan kepala dan ekor (harmonisasi &amp; kerjasama)</string>

    <string name="ap_pekingsai_type_2">II. Ekspresi</string>
    <string name="ap_pekingsai_type_2_det_1">1. Ekspresi (Gembira, Marah, Takut, Curiga, Ragu - Ragu, Mabuk, Tidur, Kaget, dll)</string>
    <string name="ap_pekingsai_type_2_det_2">2. Kesesuaian dengan alur cerita, keserasian Pekingsai, alat peraga</string>
    <string name="ap_pekingsai_type_2_det_3">3. Musik jelas dan serasi dengan gerakan Pekingsai</string>

    <string name="ap_pekingsai_type_3">III. Tingkat Kesulitan</string>
    <string name="ap_pekingsai_type_3_det_1">1. Melaksanakan 5 gerakan tingkat kesulitan</string>
    <string name="ap_pekingsai_type_3_det_2">2. Setiap kekurangan gerakan potongan nilai</string>
    <string name="ap_pekingsai_type_3_det_3">3. Setiap kelebihan gerakan tambahan nilai 0,1 max tambahan nilai 0,5</string>

    <string name="ap_pekingsai_type_4">IV. Pengurangan</string>
    <string name="ap_pekingsai_type_5">V. Catatan</string>
    <string name="ap_pekingsai_type_5_det_1">Jumlah gerakan tingkat kesulitan</string>

<!--FOrm Taolu-->
    <string name="ap_taolu_type_1">Gerakan Standard</string>
    <string name="ap_taolu_type_1_det_1">1. Keindahan gerakan (kelincahan, semangat &amp; bertenaga)</string>
    <string name="ap_taolu_type_1_det_2">2. Bentuk Barongsai, kostum, tata tertib keluar - masuk lapangan</string>
    <string name="ap_taolu_type_1_det_3">3. Gerakan masuk akal, rytme kecepatan dan teknik gerakan</string>
    <string name="ap_taolu_type_1_det_4">4. Langkah pemain &amp; variasi kuda-kuda (minimal 10 macam)</string>
    <string name="ap_taolu_type_1_det_5">5. Keserasian / kekompakan kepala &amp; ekor (harmonisasi &amp; kerjasama)</string>
    <string name="ap_taolu_type_2">Ekspresi</string>
    <string name="ap_taolu_type_2_det_1">1. Ekspresi (gembira,marah, takut, mabuk, tidur, waspada, bangun, diam, dll)</string>
    <string name="ap_taolu_type_2_det_2">2. Kesesuaian dengan alur cerita, keserasian barongsai, alat peraga,      dekorasi</string>
    <string name="ap_taolu_type_2_det_3">3. Musik jelas dan serasi dengan gerakan Barongsai</string>
    <string name="ap_taolu_type_3">Tingkat Kesulitan</string>
    <string name="ap_taolu_type_3_det_1">1. Melaksanakan 5 gerakan tingkat kesulitan</string>
    <string name="ap_taolu_type_3_det_2">2. Setiap kekurangan gerakan potong nilai</string>
    <string name="ap_taolu_type_3_det_3">3. Setiap kelebihangerakan tambahan nilai 0,1 max tambahan nilai 0,5</string>
    <string name="ap_taolu_type_4">Catatan</string>
    <string name="ap_taolu_type_4_det_1">Jumlah total gerakan tingkat kesulitan</string>

    <string name="input_pengurangan_nilai">Input Pengurangan Nilai</string>
    <string name="pengurangan_nilai">Pengurangan Nilai</string>
    <string name="no_urut_tidak_tersedia">No urut tidak tersedia</string>
    <string name="error_msg_tidak_dapat_mengedit">Anda tidak bisa mengedit penilaian silahkan hubungi Admin!</string>



</resources>
