<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_name" />

    <EditText
        android:id="@+id/et_amlat_team_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/input_nama_team" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_urut" />
<!--    <EditText-->
<!--        android:inputType="text"-->
<!--        android:digits="0,1,2,3,4,5,6,7,8,9,*,qwertzuiopasdfghjklyxcvbnm,_,-"-->
<!--        android:hint="Only letters, digits, _ and - allowed" />-->
    <EditText
        android:id="@+id/et_amlat_no_urut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        
        android:inputType="number"
        android:hint="@string/input_no_urut" />


</LinearLayout>