<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:orientation="vertical"
    tools:context=".AddEventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_ae_tanggal_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_event" />

            <TextView

                android:id="@+id/tv_ae_tanggal_event_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/pilih_tanggal"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:textColor="?attr/editTextColor" />
            <TextView
                android:id="@+id/tv_ae_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_acara" />
            <EditText
                android:id="@+id/et_ae_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_tema"
                android:inputType="textPersonName" />
            <TextView
                android:id="@+id/tv_ae_themes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tema_acara" />

            <Spinner
                android:id="@+id/sp_ae_themes"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"

                 />



            <TextView
                android:id="@+id/tv_ae_judges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jumlah_juri" />
            <Spinner
                android:id="@+id/sp_ae_judges"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"

                />
<!--            <EditText-->
<!--                android:id="@+id/et_ae_judges"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:ems="10"-->
<!--                android:hint="@string/input_jumlah_juri"-->
<!--                android:inputType="textPersonName" />-->

            <Button
                android:id="@+id/btn_ae_submit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_submit" />
        </LinearLayout>


    </ScrollView>

</LinearLayout>