<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".Scoring">
    <TextView
        android:paddingLeft="20dp"
        android:id="@+id/tv_as_team_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_name" />

    <TextView
        android:paddingLeft="20dp"
        android:id="@+id/tv_as_no_urut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_urut"
        android:layout_marginBottom="20dp"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/penilaian"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/n1_sopan_santun"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_n1"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/n2_judul_dan_alur_cerita"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_n2"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/n3_bentuk_barongsai"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_n3"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/n4_ekspresi"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_n4"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/n5_musik"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_n5"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/n6_cirikhas_traditional"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_n6"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/n7_komposisi_permainan"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_n7"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/n8_hasil_dan_permainan"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_n8"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/n9_keterampilan"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_n9"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/n10_seragam_dan_peralatan"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_n10"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/pengurangan"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ks1_kesalahan_lain"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_ks1"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ks2_kesalahan_kecil"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_ks2"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ks3_kesalahan_sedang"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_ks3"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ks4_kesalahan_besar"
                    android:layout_weight="0.7"/>
                <EditText
                    android:text="@string/def_value"
                    android:id="@+id/et_as_ks4"
                    android:inputType="numberDecimal"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/total"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_nilai_kotor"
                    android:layout_weight="0.7"/>

                <TextView
                    android:id="@+id/tv_as_total_kotor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="?attr/editTextBackground"
                    android:textAppearance="?android:attr/textAppearanceMediumInverse"
                    android:textColor="?attr/editTextColor" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_pengurangan"
                    android:layout_weight="0.7"/>
                <TextView
                    android:id="@+id/tv_as_total_pengurangan"

                    android:textColor="?attr/editTextColor"
                    android:background="?attr/editTextBackground"
                    android:textAppearance="?android:attr/textAppearanceMediumInverse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_nilai_bersih"
                    android:layout_weight="0.7"/>
                <TextView
                    android:id="@+id/tv_as_total_bersih"
                    android:textColor="?attr/editTextColor"
                    android:background="?attr/editTextBackground"
                    android:textAppearance="?android:attr/textAppearanceMediumInverse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>

            </LinearLayout>
            <Button
                android:layout_marginTop="30dp"
                android:id="@+id/btn_as_submit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_submit"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>